--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   },
-
-
   "dependencies": {
-    "@chec/commerce.js": "^2.4.1"
+    "@chec/commerce.js": "^2.4.1",
+    "animejs": "^3.2.1"
   }
 }
