--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.4.1",
-    "animejs": "^3.2.1"
+    "animejs": "^3.2.1",
+    "axios": "^0.21.1"
   }
 }
