added redirect to serverless function

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
     command = "npm run build"
     publish = "dist"
     functions = "functions/"
+
+[[redirects]]
+    from = "/api/update-order-status"
+    to = "https://gallant-elion-7705d9.netlify.app/.netlify/functions/update-order-status"
+    status = 200
