reconfigured parcel scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "parcel dist/js/index.js --out-dir dist/js/ --out-file bundle.js --public-url .",
-    "build": "parcel build dist/js/index.js --out-dir dist/js/ --out-file bundle.js"
+    "watch": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url ."
   },
   "keywords": [],
   "author": "",
