--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
     from = "/api/update-order-status"
     to = "/.netlify/functions/update-order-status"
     status = 200
+
+[[redirects]]
+    from = "/api/make-payment"
+    to = "/.netlify/functions/make-payment"
+    status = 200
