--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./"
+    "watch": "parcel src/index.pug",
+    "build": "parcel build src/index.pug --public-url ./"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
+    "pug": "^3.0.2",
     "sass": "^1.34.0"
   },
   "dependencies": {
