--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@chec/commerce.js": "^2.4.1",
     "animejs": "^3.2.1",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "netlify-cli": "^3.31.3"
   }
 }
