--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chec/commerce.js": "^2.4.1",
     "animejs": "^3.2.1",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "netlify-cli": "^3.31.3"
   }
 }
